--- a/mainapp/templates/read.html
+++ b/mainapp/templates/read.html
@@ -1,7 +1,41 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <p>글 제목 : {{post.title}}</p>
 <p>글 내용</p>
 {{post.content|linebreaksbr}}
 <br>
+{%if request.user == post.user or request.user.is_staff %}
 <a href="{%url 'update' post.id%}">수정하기</a>
 <a href="{%url 'delete' post.id%}">삭제하기</a>
+{%endif%}
+
+
+{%if user.is_authenticated %}
+<form action="{%url 'c_create' post.id%}" method="POST">
+    {%csrf_token%}
+    <div class="input-group mt-5 mb-5">
+        <input type="text" name="comment" class="form-control" placeholder="댓글을 입력하세요">
+        <div class="input-group-append">
+            <button class="btn btn-danger"><i class="fas fa-pencil-alt"></i></button>
+        </div>
+    </div>
+</form>
+{% endif%}
+
+
+<div>
+    <ul class="list-group mb-2">
+        {%for c in comment%}
+        <li class="list-group-item list-group-item-light">
+            {%if c.anonymous == True%}
+            <span style="font-weight: bold;font-size:0.7em;">익명</span>
+            {%else%}
+            <span style="font-weight: bold;font-size:0.7em;">{{c.user}}</span>
+            {%endif%}
+            <br>
+            {{c.content}}
+        </li>
+        {%endfor%}
+    </ul>
+</div>
+
 <a href="/">돌아가기</a>
