--- a/mainapp/templates/update.html
+++ b/mainapp/templates/update.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <h1>글 수정 페이지</h1>  
 <form action="{%url 'update' post.id%}" method="post">
     {%csrf_token%} 
